--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
   xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd"
   backupGlobals="true"
   backupStaticProperties="true"
-  beStrictAboutChangesToGlobalState="true"
+  beStrictAboutChangesToGlobalState="false"
   beStrictAboutOutputDuringTests="true"
   beStrictAboutTestsThatDoNotTestAnything="true"
   beStrictAboutCoverageMetadata="false"
@@ -27,6 +27,8 @@
   failOnRisky="true"
   failOnSkipped="true"
   failOnWarning="true"
+  processIsolation="false"
+  requireCoverageMetadata="false"
   stopOnDefect="true"
   stopOnDeprecation="true"
   stopOnError="true"
@@ -39,17 +41,17 @@
 >
   <testsuites>
     <testsuite name="Unit">
-      <directory suffix="Test.php">./tests/Unit</directory>
+      <directory suffix="Test.php">./tests/Unit/</directory>
     </testsuite>
   </testsuites>
   <coverage>
     <report>
-      <html outputDirectory="phpunit/coverage"/>
+      <html outputDirectory="phpunit/coverage/"/>
     </report>
   </coverage>
   <source>
     <include>
-      <directory suffix=".php">./src</directory>
+      <directory suffix=".php">./src/</directory>
     </include>
   </source>
 </phpunit>
